css/styles.css
/* BIG GUYS */

* {
  box-sizing: border-box;
  font-family: roboto;
}
body {
  background: #f3f3f3;
}

/* LOG-IN SCREEN */

.login-page {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100vw;
  height: 100%;
  background: #ffffff;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: roboto;
  font-size: 18px;
}
.logo {
  width: 130px;
  height: 92px;
  margin: 13vh 0 16vh 0;
}
.login-page input {
  width: 260px;
  height: 54px;
  border-radius: 4px;
  margin-bottom: 3vh;
  text-align: center;
  font-size: 18px;
  outline: none;
  border: 1px solid #d7d7d7;
}
.login-page input::placeholder {
  color: #aeaeae;
}
.login-page button {
  width: 109px;
  height: 45px;
  border-radius: 9px;
  font-size: 18px;
  background: #e7e7e7;
  color: #696969;
  border: none;
}
.loading img {
  width: 120px;
  height: 82px;
  margin-bottom: 3vh;
}
.loading {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* HEADER */

.header {
  position: fixed;
  top: 0;
  left: 0;
  height: 80px;
  width: 100%;
  background: #ffffff;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 22px;
  font-size: 50px;
}
.header img {
  width: 75px;
  height: 53px;
}

/* MAIN PAGE */

.main {
  margin: 100px 0 85px 0;
  width: 100%;
  height: 100%;
}
.message {
  background: white;
  width: 100%;
  border-radius: 2px;
  margin: 0 0 4px 0;
  display: flex;
  align-items: center;
  padding: 13px 8px;
  font-size: 14px;
  line-height: 20px;
  word-break: break-all;
}
.private {
  background: #ffdede;
}
.movement {
  background: #dcdcdc;
}
.time {
  color: #aaaaaa;
}
.name {
  font-weight: 700;
}

/* FOOTER */

.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  height: 80px;
  width: 100%;
  background: #ffffff;
  box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 18px;
  font-size: 26px;
}
.input {
  outline: none;
  border: none;
  font-size: 22px;
  line-height: 40px;
  font-style: italic;
  width: calc(100vw - 90px);
}
.input::placeholder {
  color: #000000;
}
.who-is-listening {
  font-family: roboto;
  font-size: 14px;
  line-height: 20px;
  color: #505050;
}
.footer-left {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

/* SIDEBAR */

.sidebar {
  position: fixed;
  top: 0;
  right: 0;
  width: 259px;
  height: 100%;
  background-color: #ffffff;
  font-family: roboto;
  display: flex;
  flex-direction: column;
  font-size: 16px;
  padding: 0 16px 0 16px;
}
.sidebar ion-icon {
  font-size: 20px;
}
.sidebar .public,
.sidebar .private,
.user,
.user .left,
.users-header,
.visibility-header,
.public .left,
.private .left {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 36px;
  background: #ffffff;
}
.visibility-header,
.users-header {
  height: 66px;
  width: 100%;
  justify-content: center;
  align-items: center;
  font-weight: 700;
  text-align: center;
}
.check {
  display: none;
}
.users {
  overflow-y: scroll;
}
.gray-background {
  position: fixed;
  top: 0;
  right: 259px;
  height: 100%;
  width: calc(100vw - 259px);
  background: rgba(0, 0, 0, 0.6);
}
.selected .check {
  display: flex;
}

/* roboto 400, 700 e 400 italic */

@font-face {
  font-family: roboto;
  src: url(../assets/fonts/Roboto-Regular.ttf);
  font-weight: 400;
}
@font-face {
  font-family: roboto;
  src: url(../assets/fonts/Roboto-Italic.ttf);
  font-style: italic;
  font-weight: 400;
}
@font-face {
  font-family: roboto;
  src: url(../assets/fonts/Roboto-Bold.ttf);
  font-weight: 700;
}

.vanish {
  display: none;
}

